구관이 명관이다. module 최종적으로 하기로 결정, factory대신 중간에 deps을 써도 되는 걸로 해당 module은 브라우저 전용이다.

--- a/test/components/index.html
+++ b/test/components/index.html
@@ -6,3 +6,53 @@
 		</section>
 	</template>
 </web-component>
+
+
+<script type="module">
+module.component("my-card", ["$localStorage", "template"], function($localStorage, template) {
+	return class {
+		init($) {
+
+		}
+	}
+});
+
+
+module.component("my-card", ["$localStorage", "template", function($localStorage, template) {
+
+	/// ...
+
+}]);
+
+
+module.component("my-card", function($localStorage, template) {
+
+	/// ...
+});
+
+
+module.pipe.value("hello", function() {
+
+
+});
+
+
+module.pipe.batch(function() {
+
+	return {
+		"date": function(value) {
+			console.log(value);
+		}
+	}
+});
+
+
+module.directive.batch(function() {
+
+	return {
+		"date": function(value) {
+			console.log(value);
+		}
+	}
+});
+</script>
