--- a/test/1px.component.html
+++ b/test/1px.component.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 	<link type="module" rel="preload" href="./components/index.html" as="fetch" crossorigin/>
-	<script src="../src/js/1px.js"></script>
+	<script src="../old/js4/1px.js"></script>
 </head>
 <body>
 
